Fix progress bar wrapping.

--- a/redesign/css/main.css
+++ b/redesign/css/main.css
@@ -369,12 +369,11 @@ a:hover {
   border-bottom: 10px solid transparent;
 }
 .dialogue-bubble .bubble-content {
-  float: left;
   min-width: 200px;
   background: #97b314;
   border-radius: 2px;
   padding: 10px;
-  margin-right: 25px;
+  margin: 0 25px 0 200px;
 }
 .dialogue-bubble .bubble-text {
   color: #fff;
@@ -609,6 +608,7 @@ a:hover {
 
 .ag-progress-bar {
   float: left;
+  width: 180px;
   padding: 10px;
 }
 .ag-progress-bar li {
@@ -632,6 +632,12 @@ a:hover {
 }
 .ag-progress-bar .active a, .ag-progress-bar .active a:hover {
   color: rgba(0, 0, 0, 0.75);
+}
+.ag-progress-bar .completed .bullet {
+  background-color: #97b314;
+}
+.ag-progress-bar .completed a, .ag-progress-bar .completed a:hover {
+  color: #97b314;
 }
 .ag-progress-bar .sub {
   margin-left: 25px;
